force-app/main/default/objects/Bug__c/Bug__c.object-meta.xml
<CustomObject>
    <description>Bug description</description>
    <label>Bug_Label</label>
    <nameField>
        <label>Bug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bugs_Label</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>