force-app/main/default/objects/Bug__c/fields/Bug_email_Name__c.field-meta.xml
<CustomField>
    <fullName>Bug_email_Name__c</fullName>
    <defaultValue>$Organization.Name</defaultValue>
    <description>Bug email description</description>
    <inlineHelpText>Bug email help</inlineHelpText>
    <label>Bug email Label</label>
    <type>Email</type>
</CustomField>