force-app/main/default/objects/Bug__c/fields/Bug_Label__c.field-meta.xml
<CustomField>
    <fullName>Bug_Label__c</fullName>
    <description>Picklist field - Bug_Label description</description>
    <inlineHelpText>Picklist field - Bug_Label help</inlineHelpText>
    <label>Bug_Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug_Label</fullName>
            </value>
            <value>
                <fullName>Bug_Label1</fullName>
            </value>
            <value>
                <fullName>Bug_Label2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>