force-app/main/default/objects/Bug__c/fields/Bug_priority_Name__c.field-meta.xml
<CustomField>
    <fullName>Bug_priority_Name__c</fullName>
    <description>Bug priority description</description>
    <inlineHelpText>Bug priority Help</inlineHelpText>
    <label>Bug priority Label</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_BugPriority</valueSetName>
    </valueSet>
</CustomField>