force-app/main/default/objects/Bug__c/fields/Bug_Release_version_Name__c.field-meta.xml
<CustomField>
    <fullName>Bug_Release_version_Name__c</fullName>
    <description>Bug Release version description</description>
    <inlineHelpText>Bug Release version help</inlineHelpText>
    <label>Bug Release version Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>