force-app/main/default/objects/Bug__c/fields/Bug_Status_Pick__c.field-meta.xml
<CustomField>
    <fullName>Bug_Status_Pick__c</fullName>
    <description>Local Picklist</description>
    <label>Bug_Status_Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>resolved</fullName>
            </value>
            <value>
                <fullName>close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>