force-app/main/default/objects/Bug__c/fields/Bug_TestedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Bug_TestedBy_Name__c</fullName>
    <description>Tested By description</description>
    <inlineHelpText>Tested By help</inlineHelpText>
    <label>Tested By Label</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itay</fullName>
                <default>true</default>
                <label>Itay</label>
            </value>
            <value>
                <fullName>Vlad</fullName>
            </value>
            <value>
                <fullName>Dima</fullName>
            </value>
            <value>
                <fullName>Eyal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>