force-app/main/default/objects/Bug__c/fields/BugFormulaName__c.field-meta.xml
<CustomField>
    <fullName>BugFormulaName__c</fullName>
    <formula>IF(ISPICKVAL(Bug_Label__c ,&quot;Bug_Label1&quot;),&quot;test&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BugFormulaLabel</label>
    <type>Text</type>
</CustomField>