force-app/main/default/objects/Bug__c/fields/BugID_Name__c.field-meta.xml
<CustomField>
    <fullName>BugID_Name__c</fullName>
    <description>BugID description</description>
    <displayFormat>B-{0000}</displayFormat>
    <inlineHelpText>BugID Help</inlineHelpText>
    <label>BugID_Label</label>
    <type>AutoNumber</type>
</CustomField>