force-app/main/default/objects/Bug__c/fields/CL_formula__c.field-meta.xml
<CustomField>
    <fullName>CL_formula__c</fullName>
    <formula>$Label.Label_Short_Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL formula</label>
    <type>Text</type>
</CustomField>