force-app/main/default/objects/Bug__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature_Label</label>
    <referenceTo>Feature_Name__c</referenceTo>
    <relationshipLabel>Bugs_Label</relationshipLabel>
    <relationshipName>Bugs_Label</relationshipName>
    <type>Lookup</type>
</CustomField>