force-app/main/default/objects/Bug__c/fields/FormulaPicklistForMirrorFormula__c.field-meta.xml
<CustomField>
    <fullName>FormulaPicklistForMirrorFormula__c</fullName>
    <formula>TEXT(PicklistForMirrorFormula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaPicklistForMirrorFormula</label>
    <type>Text</type>
</CustomField>