force-app/main/default/objects/Bug__c/fields/Or2_API__c.field-meta.xml
<CustomField>
    <fullName>Or2_API__c</fullName>
    <label>Or2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>