force-app/main/default/objects/Bug__c/fields/PicklistForMirrorFormula__c.field-meta.xml
<CustomField>
    <fullName>PicklistForMirrorFormula__c</fullName>
    <label>PicklistForMirrorFormula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mirror</fullName>
            </value>
            <value>
                <fullName>formula</fullName>
            </value>
            <value>
                <fullName>remove</fullName>
            </value>
            <value>
                <fullName>indirect</fullName>
            </value>
            <value>
                <fullName>relation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>