force-app/main/default/objects/Bug__c/fields/Rank_Name__c.field-meta.xml
<CustomField>
    <fullName>Rank_Name__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rank description</description>
    <inlineHelpText>Rank help</inlineHelpText>
    <label>Rank_Label</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>