force-app/main/default/objects/Bug__c/fields/Rank_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Rank_Name_Text__c</fullName>
    <description>Rank text description</description>
    <inlineHelpText>Rank help</inlineHelpText>
    <label>Rank_Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>