force-app/main/default/objects/Bug__c/fields/static_in_formula__c.field-meta.xml
<CustomField>
    <fullName>static_in_formula__c</fullName>
    <description>for static resource relation in formula</description>
    <formula>IMAGE(&quot;/resource/MA_SalesforceSecurityLogo&quot;, &quot;some image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>static in formula</label>
    <type>Text</type>
</CustomField>