force-app/main/default/objects/Bug__c/fields/testAddScopeItemPicklist__c.field-meta.xml
<CustomField>
    <fullName>testAddScopeItemPicklist__c</fullName>
    <description>QAT-4620</description>
    <label>testAddScopeItemPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>avl1</fullName>
            </value>
            <value>
                <fullName>val2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>