force-app/main/default/objects/Bug__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bug user description</description>
    <inlineHelpText>Bug User help</inlineHelpText>
    <label>User Label</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>