force-app/main/default/objects/Bug__c/fields/vlad_trigger_new__c.field-meta.xml
<CustomField>
    <fullName>vlad_trigger_new__c</fullName>
    <description>vlad_trigger_new</description>
    <label>vlad_trigger_new</label>
    <length>12</length>
    <type>Text</type>
</CustomField>