force-app/main/default/objects/Bug__c/recordTypes/BugLabel_RT1.recordType-meta.xml
<RecordType>
    <fullName>BugLabel_RT1</fullName>
    <active>true</active>
    <label>BugLabel_RT1</label>
</RecordType>