force-app/main/default/objects/Bug__c/recordTypes/BugLabel_RT2.recordType-meta.xml
<RecordType>
    <fullName>BugLabel_RT2</fullName>
    <active>true</active>
    <label>BugLabel_RT2</label>
</RecordType>