force-app/main/default/objects/Bug__c/validationRules/ValidationToFormula.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationToFormula</fullName>
    <active>false</active>
    <errorConditionFormula>FormulaPicklistForMirrorFormula__c == &apos;Mirror&apos;</errorConditionFormula>
    <errorMessage>this is a test</errorMessage>
</ValidationRule>