force-app/main/default/objects/Bug__c/validationRules/ValidationToFormula_contains.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationToFormula_contains</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(FormulaPicklistForMirrorFormula__c,&apos;rr&apos;)</errorConditionFormula>
    <errorMessage>CONTAINS picklist</errorMessage>
</ValidationRule>